--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Welcome to Cyberpunk world!
+description: Use internet safely|安全地使用互联网, Avoid cencorship|避免监控审查, Avoid pravicy collected by Internet Companies|避免被互联网公司窃取隐私
